--- a/src/styles/FinalReviewPost.css
+++ b/src/styles/FinalReviewPost.css
@@ -14,11 +14,11 @@
 }
 
 .Odd {
-  background-color: #292B3E;
+  background-color: #343750;
 }
 
 .Even {
-  background-color: #444766;
+  background-color: #4c4f73;
 }
 
 .FinalReviewPostThumb {
