--- a/src/styles/ByPosterSection.css
+++ b/src/styles/ByPosterSection.css
@@ -1,11 +1,23 @@
 .ByPosterSection {
-  border: 2px solid coral;
-  height: 60vh;
+  /* border: 2px solid coral; */
+  /* height: 60vh; */
+  height: 480px;
+  margin-bottom: 20px;
+}
+
+.SectionHeader {
+  color: white;
+  font-family: "Raleway-SemiBold";
+  font-size: 26px;
+  margin: 0;
+  padding-bottom: 3%;
+  text-align: left;
+  box-sizing: border-box;
 }
 
 .ByPosterPendingScreen {
   height: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   align-items: center;
   justify-content: center;
 }
@@ -14,6 +26,7 @@
   height: 100%;
   justify-content: center;
   align-items: center;
+  font-family: "Raleway-Regular";
 }
 
 .ByPosterCreationFeedback .GreenCircleContainer {
@@ -41,15 +54,26 @@
 }
 
 .ByPosterButtonBig {
-  border: 1px solid white;
   color: white;
+  border: none;
+  /* border: 2px solid red; */
   background: none;
-  font-size: 20px;
-  padding: 12px 50px;
-  border-radius: 15px;
-  font-family: 'Ubuntu', sans-serif;
-  font-weight: 300;
+  font-size: 15px;
+  height: 40px;
+  width: 180px;
+  /* padding: 12px 50px; */
+  border-radius: 10px;
+  font-family: 'Arial';
+  background-color: #7316C6;
+  align-items: center;
+  /* font-weight: 300; */
 }
+
+.ByPosterButtonBig span {
+  /* border: 1px solid white; */
+  width: 100%;
+}
+
 
 .ByPosterCreationFeedback a {
   color: white;
@@ -62,18 +86,24 @@
 
 
 .ByPosterSectionContentWrapper {
-  /* border: 2px solid coral; */
-  height: 60vh;
+  /* border: 3px solid green; */
+  min-height: 480px;
+  max-height: 480px;
 }
 
 .PosterOptionContainer {
-  font-size: 30px;
-  /* font-family: 'Lucida Sans', */
-  font-weight: 200;
-  height: 75px;
+  font-size: 20px;
+  font-family: "Raleway-Regular";
   justify-content: space-between;
+  /* border: 2px solid yellow; */
+  background-color: #09090D;
+  height: 70px;
+  width: 100%;
   align-items: center;
-  padding-left: 10px;
+  padding: 4%;
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 15px 15px 0px 0px;
 }
 
 .OptionButtonsContainer {}
@@ -99,16 +129,21 @@
 .PosterPlaylistContainer {
   height: 70%;
   overflow-y: scroll;
-  /* border: 1px solid green; */
-  border: 1px solid white;
+  /* border: 1px solid white; */
 }
+
+.PosterPlaylistContainer::-webkit-scrollbar {
+  display: none;
+}
+
 
 .PosterPlaylistCard {
   height: 70px;
-  border: 1px solid rgb(85, 85, 85);
+  /* width: 100%; */
+  /* border: 1px solid rgb(85, 85, 85); */
   /* border: 1px solid orange; */
   border-top: none;
-  padding: 10px;
+  padding: 0px 10px;
   align-items: center;
 }
 
@@ -120,21 +155,43 @@
   color: white;
   text-align: left;
   max-width: 60%;
+  font-family: "Arial";
 }
 
 .PosterPlaylistCard img {
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
+}
+
+.CurtailText {
+  max-width: 100%;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.Curtail1 {
+  -webkit-line-clamp: 1;
+}
+
+.Curtail2 {
+  -webkit-line-clamp: 2;
+}
+
+.Curtail3 {
+  -webkit-line-clamp: 3;
 }
 
 .PosterPlaylistCardInfo span:nth-child(1) {
-  font-size: 16px;
+  font-size: 13px;
   /* color: red; */
   margin-bottom: 5px;
 }
 
 .PosterPlaylistCardInfo span:nth-child(2) {
-  font-size: 12px;
+  font-size: 11px;
   /* color: blue; */
 }
 
@@ -142,8 +199,10 @@
 
 .PosterMakeButtonContainer {
   /* border: 1px solid yellow; */
+  background-color: #09090D;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  font-weight: 100;
+  height: 96px;
+  border-radius: 0px 0px 15px 15px;
 }
