--- a/src/styles/FinalReviewInterface.css
+++ b/src/styles/FinalReviewInterface.css
@@ -50,7 +50,7 @@
   width: 100%;
   height: 100%;
   max-height: 100%;
-  border: 4px solid green;
+  /* border: 4px solid green; */
   /* justify-content: space-between; */
   position: relative;
 }
@@ -61,7 +61,7 @@
   justify-content: center;
   color: white;
   font-size: 20px;
-  margin-top: 2%;
+  margin: 2% 0% 1% 0%;
   align-items: center;
 }
 
@@ -116,7 +116,7 @@
 
 
 .FinalReviewPostsContainer {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   height: 77%;
   /* min-height: 0; */
   /* max-height: 60%; */
@@ -131,7 +131,7 @@
   margin: auto 0;
   /* height: 18%; */
   width: 100%;
-  border: 2px dotted orange;
+  /* border: 2px dotted orange; */
   /* position: absolute; */
   /* bottom: 0; */
 }
@@ -153,7 +153,7 @@
 }
 
 .FinalReviewFeedback {
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
   display: flex;
   flex-direction: column;
   justify-content: center;
