--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,5 @@
 .HomeScreenLoggedInSpotify {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   height: 95%;
   /* width: 100%; */
   max-height: 95%;
@@ -23,6 +23,11 @@
   /* border: 1px solid red; */
   width: 100%;
   height: 100%;
+}
+
+.RecordSleeveContainer {
+  /* height: 100px; */
+  margin-bottom: 20px;
 }
 
 .UserContainer {
@@ -72,8 +77,8 @@
   flex: 1;
   overflow: hidden;
   overflow-y: scroll;
-  /* background-color: #191a26; */
-  /* border-radius: 18px; */
+  background-color: #343750;
+  border-radius: 15px;
   width: 100%;
   /* height: 100%; */
   align-items: center;
@@ -91,6 +96,16 @@
   justify-content: flex-end;
   margin-top: 5%;
   /* border: 2px solid red; */
+}
+
+.NoPlaylistsMessage {
+  /* border: 1px solid red; */
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: "Raleway-Regular";
+  color: #8a8aa5;
 }
 
 .HomeCreatePlaylistButtonContainer button {
