--- a/src/styles/YoutubeConversionInterface.css
+++ b/src/styles/YoutubeConversionInterface.css
@@ -1,5 +1,5 @@
 .YoutubeConversionInterface {
-  border: 3px cyan dotted;
+  /* border: 3px cyan dotted; */
   width: 100%;
   height: 100%;
   max-height: 100%;
@@ -19,7 +19,7 @@
 }
 
 .YoutubeConversionsDisplayContainer {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   background-color: #09090D;
   border-radius: 15px;
   padding: 5%;
@@ -28,7 +28,7 @@
 }
 
 .YoutubeConversionsList {
-  border: 2px solid limegreen;
+  /* border: 2px solid limegreen; */
   min-height: 0;
   /* min-height: 100%; */
   /* max-height: 10%; */
