Added 500 status error handing in SubmitInputText / FinalSubmission utils, added SharedNotAdded section

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  color-scheme: light only;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,7 +13,6 @@ body {
   max-height: 92vh;
   /* border: 3px solid orange; */
   background-color: #292B3E;
-
 }
 
 code {
