--- a/src/styles/ByGenreSection.css
+++ b/src/styles/ByGenreSection.css
@@ -55,6 +55,7 @@ text {
   height: 35px;
   border-radius: 5px;
   border: none;
+  /* border: 2px solid red; */
   background: none;
   padding: 0px 30px;
   box-sizing: border-box;
@@ -65,6 +66,7 @@ text {
   white-space: nowrap;
   /* font-weight: 900; */
   font-family: "Raleway-Bold";
+  /* user-select: none; */
 }
 
 .ByGenreButtonsContainer button:last-child {
