--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -2,8 +2,9 @@
   /* border: 2px dashed yellow; */
   /* height: 99vh;
   overflow-y: scroll;
+  */
   justify-content: center;
-  align-items: center; */
+  align-items: center;
 
   height: 100%;
   /* width: 100%; */
@@ -20,12 +21,17 @@
   /* purple */
   height: 100%;
   width: 100%;
-  padding: 5%;
+  /* padding: 5%; */
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   overflow-y: scroll;
 }
+
+.StatsPadding {
+  padding: 5%;
+}
+
 
 .Stats::-webkit-scrollbar {
   display: none;
