--- a/src/styles/ByGenreSection.css
+++ b/src/styles/ByGenreSection.css
@@ -9,7 +9,7 @@
 }
 
 .ByGenreSection {
-  height: 523px;
+  min-height: 523px;
   /* border: 2px dashed red; */
   padding: 4%;
   background-color: #09090D;
