--- a/src/styles/ChangeModal.css
+++ b/src/styles/ChangeModal.css
@@ -22,8 +22,8 @@
 }
 
 .ChangeReplaceSuccess-true {
-  background: none;
-  border: none;
+  /* background: none; */
+  /* border: none; */
 }
 
 
@@ -86,7 +86,7 @@
 }
 
 .ChangeModalControlsContainer input {
-  height: 43px;
+  height: 50px;
   /* height: 20%; */
   width: 94%;
   border: none;
@@ -97,14 +97,27 @@
   padding: 0px 10px;
 }
 
+
+.InputBarError-true {
+  /* height: 40px; */
+  border: none;
+  outline: 2px solid red;
+}
+
+.InputBarError-true:focus {
+  /* height: 40px; */
+  border: none;
+  outline: 2px solid red;
+}
+
 .ChangeModalControlsContainer button {
-  height: 40px;
+  height: 50px;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 10px;
   border: none;
   background-color: #7316C6;
   font-family: "Raleway-Bold";
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 800;
   margin-top: 5%;
   color: white;
@@ -116,7 +129,7 @@
 
 .ErrorAndSearchContainer {
   /* border: 1px solid cyan; */
-  height: 40px;
+  height: 50px;
   margin-top: 5%;
   width: 100%;
 }
@@ -148,6 +161,7 @@
 
 .InputErrorMsg-true {
   visibility: visible;
+  color: red;
 }
 
 .ChangeModal button:disabled {
@@ -156,7 +170,10 @@
 
 
 .ReplaceSuccessMessage {
-  height: 100%;
+  /* border: 1px solid yellow; */
+  /* background-color: ; */
+  border-radius: 15px;
+  height: 400px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -186,6 +203,7 @@
 
 .GreenCircle span {
   font-size: 20vw;
+  display: flex;
 }
 
 @keyframes fadeIn {
@@ -283,9 +301,7 @@
   border: none;
 }
 
-.InputBarError-true {
-  border: 2px solid rgb(209, 0, 0);
-}
+
 
 .SearchButtonContainer {
   grid-area: 1/2/2/3;
