--- a/src/styles/ConversionCard.css
+++ b/src/styles/ConversionCard.css
@@ -1,7 +1,7 @@
 .NullCard {
   /* border: 1px solid orange; */
-  height: 225px;
-  max-height: 225px;
+  height: 260px;
+  max-height: 260px;
   background-color: #4a4a6a;
   border-radius: 15px;
   padding: 10px;
@@ -19,9 +19,9 @@
 
 
 .YoutubeConversionCard {
-  /* border: 1px solid orange; */
-  height: 225px;
-  max-height: 225px;
+  border: 1px solid rgb(90, 90, 90);
+  height: 260px;
+  max-height: 260px;
   background-color: #09090D;
   border-radius: 15px;
   padding: 10px;
@@ -31,6 +31,10 @@
   /* margin: auto 0; */
   /* width: 90%; */
   position: relative;
+}
+
+.YTCC-Excluded {
+  border: 1px solid transparent;
 }
 
 #caretDown {
@@ -43,18 +47,44 @@
 
 /* YOUTUBE SEGMENT */
 
+.YoutubeConversionCard a {
+  /* border: 1px solid lime; */
+  /* height: 100%; */
+  width: 100%;
+  text-decoration: none;
+  color: white;
+  margin: 0;
+  padding: 0;
+}
+
 .YoutubeSegment {
-  height: 100px;
-  max-height: 100px;
+  height: 45%;
+  width: 100%;
+  /* max-height: 100px; */
   background-color: #60294C;
   display: grid;
-  grid-template: 50% 50% / 1fr;
+  grid-template: 50% 50% / 1fr 33px;
   border-radius: 10px;
   overflow: hidden;
+  /* border: 1px solid yellow; */
+}
+
+.YoutubeSegment a {
+  grid-area: 1/2/3/3;
   width: 100%;
+  height: 100%;
+  background-color: #a54381;
+  color: white;
+  text-decoration: none;
+  border-radius: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
 }
 
 .YoutubeThumbContainer {
+  border: 1px solid red;
   grid-area: 1/1/2/2;
   background-color: black;
   width: 98%;
@@ -63,7 +93,7 @@
   border: 2px solid #60294C;
   /* border: 1px solid cyan; */
   border-bottom: none;
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 10px 0px 0px 0px;
   overflow: hidden;
   justify-content: center;
 }
@@ -76,11 +106,14 @@
 
 
 .YoutubeInfoContainer {
+  /* border: 1px solid cyan; */
   grid-area: 2/1/3/2;
-  font-size: 14px;
+  font-size: 13px;
   font-family: Arial;
   justify-content: center;
   align-items: center;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .CurtailText {
@@ -118,16 +151,31 @@
 
 .SpotifySegment {
   height: 100px;
-  max-height: 100px;
+  height: 45%;
+  /* max-height: 100px; */
   background-color: #245E47;
   border-radius: 10px;
   overflow: hidden;
   width: 100%;
-  padding: 10px;
+  padding: 00px 0px 00px 10px;
   align-items: center;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+.SpotifySegment a {
+  /* min-width: 100%; */
+  width: 60px;
+  height: 100%;
+  background-color: #3aa178;
+  color: white;
+  text-decoration: none;
+  border-radius: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
 }
 
 .ConversionSpotifyThumbnail {
@@ -141,15 +189,16 @@
   width: 100%;
   display: grid;
   text-align: left;
-  padding-left: 10px;
+  padding: 10px;
   justify-content: center;
 }
 
 .SpotifyTitle {
   /* border: 1px solid cyan; */
+  width: 100%;
   align-items: flex-start;
   justify-content: flex-end;
-  font-size: 15px;
+  font-size: 13px;
   margin-bottom: 3px;
 }
 
@@ -157,7 +206,7 @@
   /* border: 1px solid cyan; */
   justify-content: flex-start;
   align-items: flex-start;
-  font-size: 13px;
+  font-size: 11px;
 }
 
 /* MATCH INSPECTED MENU */
@@ -218,7 +267,7 @@
   width: 100%;
   height: 100%;
   background: none;
-  z-index: 3;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
