--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -72,6 +72,11 @@
   margin-left: 6px;
 }
 
+.HomePlaylistCardsContainerSpinner {
+  height: 100%;
+}
+
+
 .HomePlaylistCardsContainer {
   /* border: 5px solid yellow; */
   flex: 1;
@@ -82,6 +87,10 @@
   width: 100%;
   /* height: 100%; */
   align-items: center;
+}
+
+.HPCC-Spinner {
+  background-color: #292B3E;
 }
 
 .HomePlaylistCardsContainer::-webkit-scrollbar {
@@ -168,7 +177,7 @@
   height: 50px;
   width: 100%;
   background-color: #7316C6;
-  border-radius: 5px;
+  border-radius: 10px;
   border: none;
   font-family: Arial;
   font-size: 16px;
