--- a/src/styles/OverviewSection.css
+++ b/src/styles/OverviewSection.css
@@ -28,17 +28,17 @@
 
 .GraphChartContainer {
   grid-area: 1/1/2/2;
-  /* border: 2px solid red; */
+  /* border: 2px solid green; */
 }
 
 .GraphFooterContainer {
   grid-area: 2/1/3/2;
   /* padding-top: 20px; */
-  /* border: 2px solid blue; */
+  /* border: 3px solid blue; */
 }
 
 .ChartBarContainer {
-  /* border: 1px solid green; */
+  /* border: 1px solid yellow; */
   height: 100%;
   flex: 1;
   justify-content: center;
@@ -81,7 +81,7 @@
 }
 
 .FooterYearContainer {
-  /* border: 1px solid green; */
+  /* border: 1px solid hotpink; */
   height: 100%;
   flex: 1;
   justify-content: center;
@@ -89,5 +89,5 @@
   font-size: 150%;
   color: white;
   font-family: "Raleway-Regular";
-  font-size: 28px;
+  /* font-size: 28px; */
 }
