--- a/src/styles/SharedNotAddedSection.css
+++ b/src/styles/SharedNotAddedSection.css
@@ -2,6 +2,7 @@
   /* border: 3px solid yellow; */
   width: 100%;
   background-color: #4A4964;
+  align-items: center;
 }
 
 .BackgroundGradientBlock {
@@ -25,13 +26,18 @@
   box-sizing: border-box;
 }
 
+.SharedNotAddedSectionPadding>div:last-child {
+  /* border: 3px solid yellow; */
+  margin-bottom: 0;
+}
+
 .SharedNotAddedSegment {
   height: 500px;
   max-height: 500px;
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
 }
 
 .YoutubeNotAdded {
@@ -43,6 +49,11 @@
 
 .YoutubeNotAdded h4 {
   color: #FF6363;
+}
+
+.YoutubeNotAdded .SharedNotAddedSegmentFooter {
+  /* background-color: #FF6363; */
+  /* filter: brightness(50%); */
 }
 
 .AlbumNotAdded {
@@ -100,9 +111,17 @@
   overflow-y: scroll;
 }
 
-.SharedNotAddedSegmentContent a {
+.SharedNotAddedYoutubeCard a {
+  display: inline-block;
+  width: 100%;
+  height: 90px;
+  padding: 0% 4%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
   text-decoration: none;
   color: white;
+  /* border: 1px solid yellow; */
 }
 
 
@@ -111,10 +130,10 @@
 }
 
 .SharedNotAddedSegmentFooter {
-  height: 3%;
+  height: 6%;
   width: 100%;
-  background-color: #292B3E;
-  /* background-color: #09090D; */
+  /* background-color: #292B3E; */
+  background-color: #09090D;
 
   border-radius: 0px 0px 15px 15px;
 }
@@ -184,4 +203,48 @@
 
 .Curtail5 {
   -webkit-line-clamp: 5;
+}
+
+.ExportButton {
+  height: 50px;
+  width: 80%;
+  border-radius: 10px;
+  border: none;
+  background-color: #7316C6;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: 600;
+  /* margin-top: 24px; */
+  /* margin-bottom: 20px; */
+  color: white;
+}
+
+.ExportButton>svg {
+  /* border: 1px solid red; */
+  height: 100%;
+}
+
+#CheckCircle {
+  height: 75%;
+}
+
+.ShareLinkBannerAndButton {
+  height: 100px;
+  /* border: 1px solid red; */
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 5%;
+}
+
+.SharingLinkGeneratedBanner {
+  width: 100%;
+  height: 30px;
+  background-color: #66B06E;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
 }
