--- a/src/styles/ByYearSection.css
+++ b/src/styles/ByYearSection.css
@@ -163,7 +163,8 @@
   height: 100%;
   width: 30%;
   justify-content: flex-end;
-  animation: growIn 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  animation: growIn 0.7s;
+  transition-timing-function: ease-in-out;
 }
 
 /* .MonthSubBar {
@@ -175,11 +176,11 @@
 }
 
 .MonthSubBar:last-child {
-  border-radius: 0px 0px 150px 150px;
+  border-radius: 0px 0px 0px 0px;
 }
 
 .MonthSubBar:only-child {
-  border-radius: 150px;
+  border-radius: 150px 150px 0px 0px;
 }
 
 
