--- a/src/styles/ChangeModal.css
+++ b/src/styles/ChangeModal.css
@@ -1,6 +1,7 @@
 .ChangeModal {
   /* height: 500px; */
   width: 100%;
+  max-width: 382px;
   border-radius: 15px;
   display: flex;
   justify-content: center;
@@ -189,177 +190,9 @@
   padding: 5%;
 }
 
-.GreenCircle {
-  height: 40vw;
-  width: 40vw;
-  border-radius: 100%;
-  background-color: limegreen;
-  color: white;
-  display: flex;
+.ChangeModalGreenCircleContainer {
+  height: 45%;
+  width: 100%;
   justify-content: center;
   align-items: center;
-  animation: fadeIn 1s;
 }
-
-.GreenCircle span {
-  font-size: 20vw;
-  display: flex;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-/*
-
-.TrackInfo {
-  display: grid;
-  grid-template: 40% 20% 20% 20% / 1fr;
-}
-
-.TrackArtContainer {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-
-.SpotifyArtwork {
-  height: 90%;
-  width: auto;
-  box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.3);
-}
-
-.TitleArtistsContainer {
-  border: 3px solid orange;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-weight: 300;
-  margin-top: 10px;
-}
-
-.TitleContainer {
-  border: 1px solid green;
-  font-size: 18px;
-}
-
-.ArtistsContainer {
-  border: 1px solid hotpink;
-  font-size: 14px;
-}
-
-.InputContainer {
-  border: 1px solid blue;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.InputAndErrorContainer {
-  border: 1px solid red;
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template: 75% 25% / 1fr;
-}
-
-.InputBarAndButtonContainer {
-  grid-area: 1/1/2/2;
-  border: 1px solid orange;
-  display: grid;
-  grid-template: 1fr / 85% 15%;
-}
-
-.InputBarContainer {
-  grid-area: 1/1/2/2;
-  border: 1px solid yellow;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-}
-
-.InputBarContainer input {
-  height: 35px;
-  width: 95%;
-  border-radius: 20px;
-  box-sizing: border-box;
-  padding: 15px;
-  font-size: 13px;
-}
-
-.InputBarError-false {
-  border: none;
-}
-
-
-
-.SearchButtonContainer {
-  grid-area: 1/2/2/3;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-}
-
-.SearchButtonContainer button {
-  height: 35px;
-  width: 35px;
-  border-radius: 200px;
-  border: none;
-}
-
-
-.InputErrorMessageContainer {
-  grid-area: 2/1/3/2;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-
-}
-
-.InputErrorMessageContainer span {
-  color: darkred;
-  font-size: 10px;
-  padding-left: 3%;
-}
-
-.InputErrorMsg-false {
-  visibility: hidden;
-}
-
-.InputErrorMsg-true {
-  visibility: visible;
-}
-
-#Search {
-  color: gray;
-}
-
-.Buttons {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.Buttons button {
-  height: 30px;
-  width: 130px;
-  border-radius: 20px;
-  border: none;
-  margin: 0px 10px;
-}
-
-
-
-*/
