--- a/src/styles/FinalReviewInterface.css
+++ b/src/styles/FinalReviewInterface.css
@@ -169,33 +169,10 @@
   margin: 0;
 }
 
-#WhiteTick {
-  height: 100%;
+.FinalReviewFeedbackGreenCircleContainer {
+  /* border: 1px solid red; */
+  height: 30%;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-@keyframes noNewFadeIn {
-  0% {
-    opacity: 0
-  }
-
-  100% {
-    opacity: 1
-  }
-}
-
-.Red {
-  background-color: rgb(199, 93, 93) !important;
-}
-
-.Red span {
-  height: 100%;
-  width: 100%;
-  font-size: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
