--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -1,3 +1,160 @@
+.row div {
+  /* padding:20px 10px; */
+  /* border: 1px solid; */
+  /* height: 75%; */
+}
+
 .Signup {
-  border: 2px solid green;
+  /* border: 2px solid green; */
+  height: 94%;
+  max-height: 94%;
+  padding: 5%;
+  justify-content: space-between;
+}
+
+.Signup a {
+  /* text-decoration: none; */
+  color: white;
+}
+
+.AuthHeaders {
+  /* border: 2px dashed cyan; */
+  margin-bottom: 20%;
+}
+
+.Signup h1 {
+  /* border: 1px solid red; */
+  width: 100%;
+  text-align: left;
+  font-size: 41px;
+  /* font-size: 11vw; */
+  /* font-size: 3rem; */
+  /* margin-bottom: 16px; */
+  margin-bottom: 5%;
+}
+
+.Signup h2 {
+  text-align: left;
+  /* border: 1px solid red; */
+  font-size: 20px;
+}
+
+.Signup form {
+  /* border: 3px solid yellow; */
+  height: 80%;
+  background-color: #09090D;
+  border-radius: 15px;
+  /* padding: 15px; */
+  padding: 4.2%;
+  justify-content: center;
+}
+
+.Signup input {
+  height: 50px;
+  /* height: 20%; */
+  width: 100%;
+  border: none;
+  background-color: #1B1C2A;
+  border-radius: 15px;
+  color: white;
+  font-size: 16px;
+  padding: 0px 10px;
+  box-sizing: border-box;
+}
+
+.InputContainer {
+  /* border: 1px solid yellow; */
+  height: 98px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-bottom: 16px;
+}
+
+.Signup .InputContainer span {
+  width: 100%;
+  margin-bottom: 8px;
+  text-align: left;
+  font-family: "Raleway-Regular";
+  font-size: 16px;
+}
+
+.SignupInputError-true {
+  /* outline: none; */
+  border: 2px solid red !important;
+}
+
+.SignupInputError-true:focus {
+  outline: none;
+  border: 2px solid red;
+}
+
+.Signup button {
+  height: 50px;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+  background-color: #66B06E;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: 600;
+  /* margin-top: 24px; */
+  margin-top: 5%;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.Signup a {
+  /* border: 1px solid red; */
+  font-family: "Raleway-Regular";
+  font-size: 14px;
+}
+
+.Signup .LoginErrorContainer {
+  /* border: 1px solid red; */
+  height: 20px;
+  padding-top: 0;
+  /* align-items: flex-start; */
+  /* justify-content: flex-start; */
+  /* padding-top: 1%; */
+}
+
+.Signup .LoginErrorMsg {
+  color: red;
+  /* border: 1px solid yellow; */
+  height: 20px;
+  width: 100%;
+  padding-top: 0;
+  justify-content: center;
+  /* align-items: center; */
+  /* padding-top: 2%; */
+  /* height: 10%; */
+}
+
+.Signup .LoginErrorMsg svg {
+  /* border: 1px solid green; */
+  margin-top: 2px;
+  margin-right: 2%;
+}
+
+.AuthSpinnerContainer {
+  /* border: 1px solid red; */
+  width: 100%;
+}
+
+.authSubmitButton:disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+#SignupInputError {
+  padding-top: 5px;
+  height: 16px;
+  /* border: 1px solid red; */
+  color: red;
+  font-size: 14px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  display: flex;
+  align-items: center;
 }
