--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -26,7 +26,7 @@
   background-color: #292B3E;
   /* opacity: 0.5; */
   height: 100%;
-  z-index: 999;
+  z-index: 888;
 }
 
 .StatsGoBackContainer {
@@ -197,3 +197,53 @@
 /* .SectionHeader {
   margin: 0;
 } */
+
+.SpotifyLoggedInBanner {
+  /* width: 100%; */
+  /* max-width: 100%; */
+  margin-top: 5%;
+  padding: 2%;
+  border-radius: 10px;
+  background-color: #66B06E;
+  color: white;
+  font-size: 20px;
+  font-family: "Raleway-Regular";
+  word-wrap: break-word;
+}
+
+.SpotifyLoggedInBanner>svg {
+  padding-left: 2%;
+}
+
+.PublicRegisterLoginContainer {
+  /* border: 1px solid white; */
+  background-color: #4A4964;
+  padding: 5%;
+  justify-content: center;
+  align-items: center;
+}
+
+.PublicRegisterLoginContainer>span {
+  width: 80%;
+  /* background-color: white; */
+  color: color;
+  /* padding: 5% 0%; */
+  /* border: 1px solid red; */
+}
+
+.PublicRegisterLoginButton {
+  color: white;
+  border: none;
+  /* border: 2px solid red; */
+  background: none;
+  margin-top: 5%;
+  height: 50px;
+  width: 100%;
+  /* padding: 12px 50px; */
+  border-radius: 10px;
+  font-family: 'Arial';
+  font-size: 16px;
+  font-weight: 600;
+  background-color: #66B06E;
+  align-items: center;
+}
