--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -6,10 +6,10 @@
 
 .Signup {
   /* border: 2px solid green; */
-  height: 94%;
-  max-height: 94%;
+  height: 100%;
+  max-height: 100%;
   padding: 5%;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .Signup a {
@@ -19,7 +19,7 @@
 
 .AuthHeaders {
   /* border: 2px dashed cyan; */
-  margin-bottom: 20%;
+  /* margin-bottom: 10%; */
 }
 
 .Signup h1 {
@@ -41,12 +41,13 @@
 
 .Signup form {
   /* border: 3px solid yellow; */
-  height: 80%;
+  height: 365px;
   background-color: #09090D;
   border-radius: 15px;
   /* padding: 15px; */
   padding: 4.2%;
   justify-content: center;
+  padding-bottom: 8%;
 }
 
 .Signup input {
@@ -110,30 +111,34 @@
   font-size: 14px;
 }
 
-.Signup .LoginErrorContainer {
-  /* border: 1px solid red; */
-  height: 20px;
-  padding-top: 0;
-  /* align-items: flex-start; */
-  /* justify-content: flex-start; */
-  /* padding-top: 1%; */
+
+/*  */
+
+.SignupErrorContainer {
+  /* border: 1px solid green; */
+  height: 40px;
+  display: flex;
+  align-items: center;
+  /* padding-top: 0; */
+  /* padding-bottom: 4%; */
+
 }
 
-.Signup .LoginErrorMsg {
+.SignupErrorMsg {
   color: red;
   /* border: 1px solid yellow; */
-  height: 20px;
-  width: 100%;
-  padding-top: 0;
+  padding-top: 2%;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  /* align-items: center; */
-  /* padding-top: 2%; */
+  width: 100%;
+  padding-bottom: 4%;
   /* height: 10%; */
 }
 
-.Signup .LoginErrorMsg svg {
+.SignupErrorMsg svg {
   /* border: 1px solid green; */
-  margin-top: 2px;
+  /* margin-top: 2px; */
   margin-right: 2%;
 }
 
