--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 
 .AppView {
   background-color: #292B3E;
-  border: 2px solid red;
+  border: 2px solid green;
   border-radius: 15px;
   height: 100%;
   max-height: 100%;
