--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   /* 92vh */
   max-height: 100vh;
   /* 92vh */
-  border: 3px solid yellow;
+  /* border: 3px solid yellow; */
   display: flex;
   justify-content: center;
   /* border: 2px solid orange; */
@@ -19,7 +19,7 @@
 
 .AppView {
   background-color: #292B3E;
-  border: 2px solid green;
+  /* border: 2px solid green; */
   border-radius: 15px;
   height: 100%;
   max-height: 100%;
