removed orange app border

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   /* 92vh */
   max-height: 100vh;
   /* 92vh */
-  border: 5px solid orange;
+  /* border: 5px solid orange; */
   display: flex;
   justify-content: center;
   /* border: 2px solid orange; */
