Changed loading spinner render logic in GoogleDocInterface, changed scrollbar styling on InputTextAreas and added scroll bar to YoutubeConversionInterface

--- a/src/styles/GoogleDocInterface.css
+++ b/src/styles/GoogleDocInterface.css
@@ -88,6 +88,8 @@ textarea::-webkit-scrollbar-track {
 textarea::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 1px solid slategrey;
+  height: 60px;
+  border-radius: 20px;
 }
 
 .GoogleInputTextButtonArea {
