--- a/src/styles/SharedNotAddedSection.css
+++ b/src/styles/SharedNotAddedSection.css
@@ -13,7 +13,7 @@
 
 .SharedNotAddedSectionPadding {
   padding: 5%;
-  /* border: 1px solid red; */
+  box-sizing: border-box;
 }
 
 .SectionHeader {
@@ -35,9 +35,12 @@
   height: 500px;
   max-height: 500px;
   width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   margin-bottom: 50px;
+  box-sizing: border-box;
+  /* border: 3px solid yellow; */
 }
 
 .YoutubeNotAdded {
