--- a/src/styles/YoutubeConversionInterface.css
+++ b/src/styles/YoutubeConversionInterface.css
@@ -39,6 +39,7 @@
   /* padding: 5%; */
   align-items: center;
   padding: 0px;
+  padding-right: 5px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -50,10 +51,7 @@
 
 
 .YoutubeConversionsList::-webkit-scrollbar {
-  width: 1em;
   height: 40px;
-  /* padding: 0; */
-  /* margin: 0; */
 }
 
 .YoutubeConversionsList::-webkit-scrollbar-track {
