--- a/src/styles/ByPosterSection.css
+++ b/src/styles/ByPosterSection.css
@@ -201,7 +201,7 @@
 .PosterPlaylistCard {
   /* border: 1px solid red; */
   height: 70px;
-  /* width: 99%; */
+  width: 99%;
   /* border: 1px solid rgb(85, 85, 85); */
   /* border: 1px solid orange; */
   border-top: none;
