Refactored ConversionCard to remove 'inspected' menu - buttons now visible in the YT Conversion Card itself, to the side - refactored YoutubeConversionInterface.js accordingly, to remove obselete handler methods

--- a/src/styles/SNAAlbumOrPlaylistCard.css
+++ b/src/styles/SNAAlbumOrPlaylistCard.css
@@ -7,6 +7,12 @@
   flex-direction: column;
 }
 
+#SNAAOP-Link {
+  text-decoration: none !important;
+  color: white;
+}
+
+
 .SNA-AOP-PosterAndTracksContainer {
   /* border: 1px solid red; */
   height: 20px;
