--- a/src/styles/ConversionCard.css
+++ b/src/styles/ConversionCard.css
@@ -10,6 +10,12 @@
   align-items: center;
   /* width: 90%; */
   color: rgb(27, 27, 27);
+  position: absolute;
+  /* Hide a Null Card! Do this because we don't want to manipulate any arrays */
+  top: 0;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .NullCard span {
@@ -19,14 +25,18 @@
 
 
 .YoutubeConversionCard {
-  border: 1px solid rgb(90, 90, 90);
-  height: 260px;
-  max-height: 260px;
+  /* border: 1px solid rgb(90, 90, 90); */
+  width: 80%;
+  max-width: 80%;
+  box-sizing: border-box;
+  /* border: 1px solid red; */
+  height: 216px;
+  max-height: 250px;
   background-color: #09090D;
-  border-radius: 15px;
-  padding: 10px;
+  border-radius: 0px 15px 15px 0px;
+  /* padding: 8px 8px; */
   margin-bottom: 17px;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   /* margin: auto 0; */
   /* width: 90%; */
@@ -34,15 +44,17 @@
 }
 
 .YTCC-Excluded {
-  border: 1px solid transparent;
+  /* border: 1px solid transparent; */
 }
 
 #caretDown {
   /* border: 1px solid red; */
+  height: 5%;
   margin: 0;
-  font-size: 20px;
+  font-size: 14px;
   padding: 0px;
-  transform: scale(2, 1.3);
+  transform: scale(4, 1.3);
+  margin-bottom: 1px;
 }
 
 /* YOUTUBE SEGMENT */
@@ -58,33 +70,47 @@
 }
 
 .YoutubeSegment {
-  height: 45%;
+  height: 100%;
   width: 100%;
   /* max-height: 100px; */
   background-color: #60294C;
   display: grid;
-  grid-template: 50% 50% / 1fr 33px;
-  border-radius: 10px;
+  /* grid-template: 50% 50% / 1fr; */
+  /* border-radius: 10px; */
+  border-radius: 10px 10px 10px 10px;
   overflow: hidden;
+
   /* border: 1px solid yellow; */
 }
 
-.YoutubeSegment a {
-  grid-area: 1/2/3/3;
+.SegmentWrapper {
+  /* margin: 8px 8px 8px 8px; */
+  /* border: 1px solid yellow; */
+  height: 50%;
   width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.YoutubeSegmentWrapper {
+  padding: 8px 8px 4px 8px;
+}
+
+.SpotifySegmentWrapper {
+  padding: 4px 8px 8px 8px;
+}
+
+.SegmentWrapper a {
+  /* border: 1px solid white; */
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 100%;
-  background-color: #a54381;
-  color: white;
-  text-decoration: none;
-  border-radius: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
 }
 
 .YoutubeThumbContainer {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   grid-area: 1/1/2/2;
   background-color: black;
   width: 98%;
@@ -93,7 +119,7 @@
   border: 2px solid #60294C;
   /* border: 1px solid cyan; */
   border-bottom: none;
-  border-radius: 10px 0px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
   overflow: hidden;
   justify-content: center;
 }
@@ -108,7 +134,7 @@
 .YoutubeInfoContainer {
   /* border: 1px solid cyan; */
   grid-area: 2/1/3/2;
-  font-size: 13px;
+  font-size: 12px;
   font-family: Arial;
   justify-content: center;
   align-items: center;
@@ -150,17 +176,20 @@
 }
 
 .SpotifySegment {
-  height: 100px;
-  height: 45%;
+  /* height: 100px; */
+  height: 100%;
   /* max-height: 100px; */
   background-color: #245E47;
-  border-radius: 10px;
+  /* border: 1px solid yellow; */
+  /* border-radius: 10px; */
+  border-radius: 10px 10px 10px 10px;
   overflow: hidden;
   width: 100%;
-  padding: 00px 0px 00px 10px;
+  max-width: 100%;
+  /* padding: 00px 0px 00px 10px; */
+  /* margin: 4px 8px 8px 8px; */
+
   align-items: center;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -178,35 +207,63 @@
   font-size: 20px;
 }
 
+.ConversionSpotifyThumbnailContainer {
+  /* border: 1px solid lime; */
+  height: 100%;
+  justify-content: center;
+  align-items: flex-end;
+  width: 32%;
+  min-width: 32%;
+}
+
 .ConversionSpotifyThumbnail {
   height: 60px;
   width: 60px;
+  /* border: 1px solid white; */
 }
 
 .ConversionSpotifyInfoContainer {
   /* border: 1px solid red; */
+  /* flex: 1; */
+  width: 68%;
+  max-width: 68%;
   height: 100%;
-  width: 100%;
   display: grid;
   text-align: left;
-  padding: 10px;
   justify-content: center;
+  /* box-sizing: border-box; */
+  /* box-sizing: border-box; */
+  padding: 10px 10px 10px 10px;
 }
 
 .SpotifyTitle {
+  /* padding: 10px; */
   /* border: 1px solid cyan; */
-  width: 100%;
+  width: 88%;
+  max-width: 88%;
+  /* max-width: 10%; */
   align-items: flex-start;
   justify-content: flex-end;
-  font-size: 13px;
+  font-size: 12px;
   margin-bottom: 3px;
+  box-sizing: border-box;
+  /* min-width: 42%; */
+  /* width: 100%; */
+  /* max-width: 100%; */
+  /* display: -webkit-box; */
 }
 
 .SpotifyArtists {
-  /* border: 1px solid cyan; */
+
+  /* border: 1px solid hotpink; */
+  width: 88%;
+  max-width: 88%;
+  /* min-width: 42%; */
+  /* max-width: 42%; */
   justify-content: flex-start;
   align-items: flex-start;
-  font-size: 11px;
+  font-size: 10px;
+
 }
 
 /* MATCH INSPECTED MENU */
@@ -277,8 +334,9 @@
   background-color: #863434;
   opacity: 0.75;
   height: 100%;
-  width: 100%;
-  border-radius: 15px;
+  width: 101%;
+  border-radius: 0px 15px 15px 0px;
+  /* border-radius: 15px; */
 }
 
 .ConversionExcludeCrossIcon {
@@ -296,4 +354,87 @@
 
 #ReIncludeButton {
   background-color: #66B06E;
+}
+
+.YTC-Wrapper {
+  position: relative;
+  /* border: 1px solid yellow; */
+}
+
+.ChangedAsterisk {
+  /* border: 1px solid red; */
+  width: 100%;
+  position: absolute;
+  top: -8%;
+  left: 5px;
+  z-index: 2;
+  text-align: right;
+  font-size: 42px;
+  color: white;
+}
+
+.YTC-ButtonsMenuContainer {
+  background-color: #09090D;
+
+  height: 200px;
+  /* border: 2px solid blue; */
+  padding: 8px 0px 8px 6px;
+  width: 15%;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 4px; */
+  margin-bottom: 17px;
+  border-radius: 10px 0px 0px 10px;
+  margin-left: 4px;
+}
+
+.ButtonsMenuContainer-Include-false {
+  background-color: #6a292b;
+
+}
+
+.YTC-ButtonsMenuContainer button {
+  height: 30%;
+  width: 40px;
+  border-radius: 0px 10px 10px 0px;
+  border: none;
+  background-color: #7316C6;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: 600;
+  /* margin-top: 24px; */
+  /* margin-top: 5%; */
+  /* margin-bottom: 20px; */
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.YTC-ButtonsMenuContainer button:disabled {
+  opacity: 0.5;
+}
+
+
+.YTC-ButtonsMenuContainer button:nth-child(1) {
+  /* border: 1px solid red; */
+  border-radius: 10px 10px 10px 0px;
+}
+
+.YTC-ButtonsMenuContainer button:nth-child(3) {
+  /* border: 1px solid red; */
+  border-radius: 0px 10px 10px 10px;
+}
+
+.CC-Side-Top2-false {
+  opacity: 0 !important;
+}
+
+.CC-Side-Exclude-true {
+  background-color: #900000 !important;
+}
+
+.CC-Side-Exclude-false {
+  background-color: #66B06E !important;
+  border-radius: 10px 10px 10px 10px !important;
 }
