--- a/src/styles/YoutubeConversionInterface.css
+++ b/src/styles/YoutubeConversionInterface.css
@@ -1,6 +1,5 @@
 .YoutubeConversionInterface {
   /* border: 3px cyan dotted; */
-  width: 100%;
   height: 100%;
   max-height: 100%;
   /* position: relative; */
@@ -10,7 +9,7 @@
   font-family: "Raleway-Regular";
   font-size: 23px;
   /* border: 3px cyan dotted; */
-  width: 100%;
+  /* width: 106%; */
   text-align: left;
   margin: 5% 2%;
   -webkit-box-sizing: border-box;
@@ -22,13 +21,14 @@
   /* border: 2px solid red; */
   background-color: #09090D;
   border-radius: 15px;
-  padding: 5%;
+  padding: 2% 2%;
   min-height: 0;
   flex: 1;
 }
 
 .YoutubeConversionsList {
   /* border: 2px solid limegreen; */
+  overflow-x: hidden;
   min-height: 0;
   /* min-height: 100%; */
   /* max-height: 10%; */
