--- a/src/styles/YoutubeConversionInterface.css
+++ b/src/styles/YoutubeConversionInterface.css
@@ -38,8 +38,8 @@
   overflow-y: scroll;
   /* padding: 5%; */
   align-items: center;
-  padding: 0px;
-  padding-right: 5px;
+  padding: 15px 0px 0px 0px;
+  /* padding-right: 5px; */
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
