--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -20,6 +20,17 @@
 .AuthHeaders {
   /* border: 2px dashed cyan; */
   /* margin-bottom: 10%; */
+  position: relative;
+}
+
+.AuthHeaders img {
+  /* border: 1px dashed red; */
+  position: absolute;
+  top: 0;
+  right: 4%;
+  /* margin-left: auto; */
+  height: 50px;
+  width: 50px;
 }
 
 .Signup h1 {
@@ -37,17 +48,19 @@
   text-align: left;
   /* border: 1px solid red; */
   font-size: 20px;
+  font-weight: 100;
 }
 
 .Signup form {
   /* border: 3px solid yellow; */
-  height: 365px;
+  height: 400px;
   background-color: #09090D;
   border-radius: 15px;
   /* padding: 15px; */
   padding: 4.2%;
   justify-content: center;
   padding-bottom: 8%;
+  box-sizing: border-box;
 }
 
 .Signup input {
@@ -119,6 +132,7 @@
   height: 40px;
   display: flex;
   align-items: center;
+  margin-top: 10px;
   /* padding-top: 0; */
   /* padding-bottom: 4%; */
 
@@ -145,6 +159,17 @@
 .AuthSpinnerContainer {
   /* border: 1px solid red; */
   width: 100%;
+  max-width: 100%;
+  align-items: center;
+  justify-content: center;
+
+  height: 400px;
+
+  border-radius: 15px;
+  /* padding: 15px; */
+  padding: 4.2%;
+  box-sizing: border-box;
+  padding-bottom: 8%;
 }
 
 .authSubmitButton:disabled {
