--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   border-radius: 15px;
   height: 100%;
   max-height: 100%;
-  width: 382px;
+  width: 362px;
   max-width: 362px;
   box-sizing: border-box;
   overflow: hidden;
@@ -127,4 +127,19 @@
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+}
+
+.HelpButton {
+  border: 1px solid white !important;
+  color: white !important;
+  width: 30px !important;
+  height: 30px !important;
+  border-radius: 150px !important;
+  font-size: 20px !important;
+  background: none !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  padding-top: 2px;
+  padding-left: 7.5px;
 }
