--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,6 +6,7 @@
   padding: 5%;
   justify-content: center;
   align-items: center;
+  /* position: relative; */
 }
 
 .CreatePlaylistModalBackdrop {
@@ -161,9 +162,12 @@
 
 .HomeCreatePlaylistModal {
   position: absolute;
-  width: 80%;
-  height: 190px;
+  /* width: 80%; */
+  width: 362px;
+  max-width: 362px;
+  height: 250px;
   padding: 5%;
+  box-sizing: border-box;
   background-color: #292B3E;
   border-radius: 15px;
   z-index: 888;
@@ -174,7 +178,7 @@
 .HomeCreatePlaylistModalContents {
   /* border: 1px solid red; */
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   justify-content: space-between;
 }
 
@@ -201,8 +205,31 @@
   font-size: 16px;
   font-weight: 600;
   color: white;
+  margin-top: 5%;
 }
 
 .HomeCreatePlaylistModalContents button:disabled {
   opacity: 0.25;
 }
+
+.HowToButtonContainer {
+  /* border: 1px solid red; */
+  width: 100%;
+  /* height: 5%; */
+  /* margin-bottom: 5%; */
+  justify-content: flex-end;
+  align-items: center;
+  box-sizing: border-box;
+  position: relative;
+  margin-bottom: 5%;
+}
+
+/* .HowToButtonContainer button {
+  border: 1px solid #797979;
+  color: #797979;
+  width: 30px;
+  height: 30px;
+  border-radius: 150px;
+  font-size: 20px;
+  background: none;
+} */
