--- a/src/styles/Help.css
+++ b/src/styles/Help.css
@@ -34,11 +34,11 @@
   padding: 8% 5%;
   box-sizing: border-box;
   justify-content: space-between;
-  font-family: "Raleway-Regular";
+  font-family: "Raleway-ExtraLight";
   text-align: left;
   font-size: 16px;
   line-height: 20px;
-  word-spacing: 1px;
+  word-spacing: 2px;
 }
 
 .HelpTextDisplay li {
