--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -53,7 +53,8 @@
 
 .Signup form {
   /* border: 3px solid yellow; */
-  height: 400px;
+  height: 55%;
+  min-height: 370px;
   background-color: #09090D;
   border-radius: 15px;
   /* padding: 15px; */
@@ -157,19 +158,16 @@
 }
 
 .AuthSpinnerContainer {
-  /* border: 1px solid red; */
-  width: 100%;
-  max-width: 100%;
-  align-items: center;
-  justify-content: center;
-
-  height: 400px;
-
+  height: 55%;
+  min-height: 370px;
+  /* background-color: #09090D; */
   border-radius: 15px;
   /* padding: 15px; */
   padding: 4.2%;
-  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
   padding-bottom: 8%;
+  box-sizing: border-box;
 }
 
 .authSubmitButton:disabled {
